package entidades;

public enum TipoHabilidade {
    DANO,
    DEFESA,
    CURA
}
