package progressao;

import sistema.Tripulacao;

public class Loja {

    public Loja() {}

    public void exibirCatalogo() { }

    public void comprarMelhoria(Tripulacao cliente) { }
}
