package progressao;

import sistema.GameManager;

public class NoBatalha implements NoMapa {

    @Override
    public void entrarNo(GameManager controle) { }
}
