package progressao;

import sistema.GameManager;

public class NoDescanso implements NoMapa {

    @Override
    public void entrarNo(GameManager controle) { }
}
