package progressao;

import sistema.GameManager;

public interface NoMapa {
    void entrarNo(GameManager controle);
}
